@@ -1,7 +1,8 @@
-@comment $NetBSD: PLIST,v 1.2 2004/03/08 14:46:31 manu Exp $
+@comment $NetBSD: PLIST,v 1.3 2004/04/12 13:55:59 tron Exp $
 bin/milter-greylist
 etc/rc.d/milter-greylist
 man/man8/milter-greylist.8
+man/man5/greylist.conf.5
 share/doc/milter-greylist/README
 share/examples/milter-greylist/greylist.conf
 @dirrm share/examples/milter-greylist
