@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.3 2004/03/25 16:57:48 manu Exp $
+$NetBSD: distinfo,v 1.4 2004/03/29 15:46:49 manu Exp $
 
-SHA1 (milter-greylist-1.0.2.tgz) = 5123d3fbf17006ac46809af70334a289ed27585b
-Size (milter-greylist-1.0.2.tgz) = 75756 bytes
+SHA1 (milter-greylist-1.2.tgz) = fd63691ff1fdb258f2165a00677ae3773492efad
+Size (milter-greylist-1.2.tgz) = 88274 bytes
